# cgal_for_3dnest

./: .gitignore  CMakeLists.txt
Advancing_front_surface_reconstruction/examples/Advancing_front_surface_reconstruction/: CMakeLists.txt  reconstruction_structured.cpp
Advancing_front_surface_reconstruction/include/CGAL/: Advancing_front_surface_reconstruction.h
Algebraic_foundations/examples/Algebraic_foundations/: algebraic_structure_dispatch.cpp  integralize.cpp
CGAL_ipelets/demo/CGAL_ipelets/: CMakeLists.txt
Convex_hull_2/examples/Convex_hull_2/: array_convex_hull_2.cpp  vector_convex_hull_2.cpp
Kernel_23/examples/Kernel_23/: points_and_segment.cpp  surprising.cpp
Point_set_processing_3/include/CGAL/: structure_point_set.h
Point_set_shape_detection_3/include/CGAL/Shape_detection_3/: Efficient_RANSAC.h  Plane.h
Polygon_mesh_processing/include/CGAL/Polygon_mesh_processing/: triangulate_hole.h
Polygon_mesh_processing/include/CGAL/Polygon_mesh_processing/internal/: fair_impl.h  refine_impl.h
Scale_space_reconstruction_3/examples/Scale_space_reconstruction_3/: scale_space_manifold.cpp
Surface_mesh/include/CGAL/Surface_mesh/: Surface_mesh.h
Surface_mesh_approximation/examples/Surface_mesh_approximation/: vsa_approximation_example.cpp
Surface_mesh_approximation/include/CGAL/: Variational_shape_approximation.h
Surface_mesh_simplification/examples/Surface_mesh_simplification/: edge_collapse_all_short_edges.cpp  edge_collapse_linear_cell_complex.cpp  edge_collapse_polyhedron.cpp
